--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 /* Add padding to containers */
 .container {
-  padding: 16px;
+  padding: 1rem;
   background: linear-gradient(135deg, #71b7e6, #9b59b6);
   
 }
@@ -11,12 +11,12 @@
 /* Full-width input fields */
 input[type=text], input[type=password] {
   width: 100%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
+  padding: .9375rem;
+  margin: .3125rem 0 1.375rem 0;
   display: inline-block;
   border: none;
   background: #f1f1f1;
-  border-radius:20px ;
+  border-radius:1.25rem ;
 
 }
 
@@ -33,16 +33,16 @@ input[type=text]:focus, input[type=password]:focus {
 
 /* Overwrite default styles of hr */
 hr {
-  border: 1px solid #f1f1f1;
-  margin-bottom: 25px;
+  border: .0625rem solid #f1f1f1;
+  margin-bottom: 1.5625rem;
 }
 
 /* Set a style for the submit/register button */
 .btn {
   background-color: #5333b6;
   color: white;
-  padding: 16px 20px;
-  margin: 8px 0;
+  padding: 1rem 1.25rem;
+  margin: .5rem 0;
   border: none;
   cursor: pointer;
   width: 100%;
@@ -62,23 +62,23 @@ a {
 .signin {
   background-color: #f1f1f1;
   text-align: center;
-  padding: 15px;
+  padding: .9375rem;
   width: 80%;
 }
 #country {
-    border-radius: 5px ;
-    padding: 5px;
-    margin-left: 5px;
+    border-radius: .3125rem ;
+    padding: .3125rem;
+    margin-left: .3125rem;
 }
 #phone {
     background: #f1f1f1;
     outline: none;
    border: none;
-   border-radius: 20px;
-   margin: 5px 0 15px 0;
+   border-radius: 1.25rem;
+   margin: .3125rem 0 1rem 0;
    width: 100%;
    display: inline-block;
-   height: 35px;
+   height: 2.5rem;
 
 }
 #country {
@@ -87,10 +87,10 @@ a {
 }
 .registration-image {
     width: 20%;
-    height:130px;
-    border-radius: 50px;
-    margin-left: 90px;
-    margin-top: -80px;
+    height:8.125rem;
+    border-radius: 3.125rem;
+    margin-left: 5.625rem;
+    margin-top: -5rem;
 }
 @media (max-width: 600px) {
   .container {
